add get all voters endpoint
